# near-agent-spike

./: .env.example  README.md  docker-compose.yml  pyproject.toml
agent/: Dockerfile  main.py
agent/near_agent/: agent.py  settings.py  system_prompt.py  tools.py
